--- a/src/app/pages/top-navbar/top-navbar.component.html
+++ b/src/app/pages/top-navbar/top-navbar.component.html
@@ -1,5 +1,5 @@
 <header>
-  <mat-toolbar mat-density="-2">
+  <mat-toolbar>
     <div class="mobile-menu">
       <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon
