--- a/src/styles/pdz-themes/_normal.scss
+++ b/src/styles/pdz-themes/_normal.scss
@@ -20,8 +20,8 @@ $theme: (
     primary-darker: "cyan-600",
     on-primary: "white",
     primary-container: "cyan-250",
-    primary-container-lighter: "cyan-100",
-    primary-container-darker: "cyan-300",
+    primary-container-low: "cyan-100",
+    primary-container-high: "cyan-300",
     primary-container-hover: "cyan-300",
     on-primary-container: "cyan-900",
     primary-hover: "cyan-600",
@@ -37,8 +37,8 @@ $theme: (
     secondary-darker: "orange-600",
     on-secondary: "white",
     secondary-container: "orange-100",
-    secondary-container-lighter: "orange-100",
-    secondary-container-darker: "orange-300",
+    secondary-container-low: "orange-100",
+    secondary-container-high: "orange-300",
     secondary-container-hover: "orange-200",
     on-secondary-container: "orange-900",
     secondary-hover: "orange-600",
@@ -136,8 +136,8 @@ $theme: (
     primary-darker: "cyan-600",
     on-primary: "cyan-950",
     primary-container: "cyan-950",
-    primary-container-lighter: "cyan-900",
-    primary-container-darker: "black",
+    primary-container-low: "cyan-900",
+    primary-container-high: "black",
     primary-container-hover: "cyan-900",
     on-primary-container: magenta,
     primary-hover: "cyan-450",
@@ -149,8 +149,8 @@ $theme: (
     secondary-darker: "orange-500",
     on-secondary: "orange-950",
     secondary-container: "orange-850",
-    secondary-container-lighter: "orange-800",
-    secondary-container-darker: "orange-900",
+    secondary-container-low: "orange-800",
+    secondary-container-high: "orange-900",
     secondary-container-hover: "orange-800",
     on-secondary-container: "orange-200",
     secondary-hover: "orange-450",
