--- a/src/styles/pdz-themes/_sunset.scss
+++ b/src/styles/pdz-themes/_sunset.scss
@@ -20,8 +20,8 @@ $theme: (
     primary-darker: "purple-700",
     on-primary: "white",
     primary-container: "purple-200",
-    primary-container-lighter: "purple-100",
-    primary-container-darker: "purple-300",
+    primary-container-low: "purple-100",
+    primary-container-high: "purple-300",
     primary-container-hover: "purple-300",
     on-primary-container: "purple-950",
     primary-hover: "purple-700",
@@ -33,8 +33,8 @@ $theme: (
     secondary-darker: "pink-700",
     on-secondary: "white",
     secondary-container: "pink-100",
-    secondary-container-lighter: "pink-50",
-    secondary-container-darker: "pink-200",
+    secondary-container-low: "pink-50",
+    secondary-container-high: "pink-200",
     secondary-container-hover: "pink-200",
     on-secondary-container: "pink-950",
     secondary-hover: "pink-800",
@@ -106,8 +106,8 @@ $theme: (
     primary-darker: "purple-500",
     on-primary: "purple-950",
     primary-container: "purple-950",
-    primary-container-lighter: "purple-900",
-    primary-container-darker: "black",
+    primary-container-low: "purple-900",
+    primary-container-high: "black",
     primary-container-hover: "purple-800",
     on-primary-container: "purple-300",
     primary-hover: "purple-300",
@@ -120,8 +120,8 @@ $theme: (
     secondary-darker: "pink-500",
     on-secondary: "pink-950",
     secondary-container: "pink-950",
-    secondary-container-lighter: "pink-800",
-    secondary-container-darker: "pink-900",
+    secondary-container-low: "pink-800",
+    secondary-container-high: "pink-900",
     secondary-container-hover: "pink-800",
     on-secondary-container: "pink-200",
     secondary-hover: "debug",
