--- a/src/styles/pdz-themes/_sunset.scss
+++ b/src/styles/pdz-themes/_sunset.scss
@@ -65,7 +65,7 @@ $theme: (
     on-info-container: "blue-950",
 
     disabled-surface: "gray-200",
-    on-disabled: "gray-500",
+    on-disabled-surface: "gray-500",
 
     surface-inverse: "gray-900",
     on-surface-inverse: "gray-100",
@@ -153,7 +153,7 @@ $theme: (
     on-info-container: "blue-200",
 
     disabled-surface: "gray-800",
-    on-disabled: "gray-600",
+    on-disabled-surface: "gray-600",
 
     surface-inverse: "gray-100",
     on-surface-inverse: "gray-900",
